--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "private": true,
     "dependencies": {
         "prop-types": "^15.6.2",
-        "react": "^16.4.1",
-        "react-dom": "^16.4.1",
-        "react-scripts": "1.1.4"
+        "react": "^16.6.1",
+        "react-dom": "^16.6.1",
+        "react-scripts": "^2.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -15,17 +15,24 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
-        "enzyme": "^3.3.0",
-        "eslint": "^4.19.1",
-        "eslint-config-airbnb": "^17.0.0",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-import": "^2.13.0",
-        "eslint-plugin-jsx-a11y": "^6.1.0",
-        "eslint-plugin-prettier": "^2.6.2",
-        "eslint-plugin-react": "^7.10.0",
-        "prettier": "^1.13.7"
+        "acorn": "^6.0.4",
+        "enzyme": "^3.7.0",
+        "eslint-config-react-app": "^3.0.5",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^3.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.2",
+        "eslint-plugin-prettier": "^3.0.0",
+        "eslint-plugin-react": "^7.11.1",
+        "prettier": "^1.15.1"
     },
     "prettier": {
         "tabWidth": 4
-    }
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
