--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.10",
+        "@fortawesome/free-solid-svg-icons": "^5.6.1",
+        "@fortawesome/react-fontawesome": "^0.1.3",
+        "i": "^0.3.6",
         "node-sass": "^4.11.0",
+        "npm": "^6.5.0",
         "prop-types": "^15.6.2",
         "react": "^16.6.1",
         "react-dom": "^16.6.1",
