--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "name": "The System",
     "icons": [
         {
-            "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
+            "src": "saturn-favicon.ico",
+            "sizes": "256x256 128x128 64x64 48x48 32x32 16x16",
             "type": "image/x-icon"
         }
     ],
