Some cleanup and work on making initial render smoother

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "document": true
     },
     "rules": {
+        "no-plusplus": [0, { "allowForLoopAfterthoughts": true }],
         "class-methods-use-this": [0],
         "prettier/prettier": "error",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
