--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
         "@fortawesome/react-fontawesome": "^0.1.4",
         "node-sass": "^4.12.0",
         "prop-types": "^15.7.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
         "react-scripts": "^3.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "devDependencies": {
@@ -34,5 +34,10 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
+    ],
+    "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
     ]
 }
