Cleaned up a heap of old code. Moved context higher in prep for creation of info menu panel. Moved over to yarn.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["airbnb", "prettier", "prettier/react"],
+    "extends": ["react-app", "prettier", "prettier/react"],
     "plugins": ["react", "prettier"],
     "parserOptions": {
         "sourceType": "module",
