--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.21",
-        "@fortawesome/free-solid-svg-icons": "^5.10.1",
-        "@fortawesome/react-fontawesome": "^0.1.4",
-        "node-sass": "^4.12.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.25",
+        "@fortawesome/free-solid-svg-icons": "^5.11.2",
+        "@fortawesome/react-fontawesome": "^0.1.7",
+        "node-sass": "^4.13.0",
         "prop-types": "^15.7.2",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
-        "react-scripts": "^3.1.1"
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-scripts": "^3.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -19,15 +19,17 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "babel-eslint": "^10.0.3",
         "enzyme": "^3.10.0",
-        "eslint-config-airbnb": "^18.0.1",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-config-react-app": "^5.0.1",
+        "eslint": "^6.6.0",
+        "eslint-config-prettier": "^6.7.0",
+        "eslint-config-react-app": "^5.0.2",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.0",
-        "eslint-plugin-react": "^7.14.3",
-        "prettier": "^1.18.2"
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.16.0",
+        "eslint-plugin-react-hooks": "1.x",
+        "prettier": "^1.19.1"
     },
     "browserslist": [
         ">0.2%",
