Improved nav menu, added information stats and added navigation option for the belt.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.formatOnSave": true,
-    "eslint.autoFixOnSave": true
+    "eslint.autoFixOnSave": true,
+    "cSpell.words": ["consts", "fortawesome", "fontawesome", "dropdown", "subheader"]
 }
