Set up switching of system size via context.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "editor.formatOnSave": true,
     "eslint.autoFixOnSave": true,
-    "cSpell.words": ["consts", "fortawesome", "fontawesome", "dropdown", "subheader"]
+    "cSpell.words": [
+        "consts",
+        "dropdown",
+        "fontawesome",
+        "fortawesome",
+        "memoized",
+        "normalise",
+        "subheader"
+    ]
 }
