--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
-        "babel-eslint": "^10.0.3",
+        "@typescript-eslint/eslint-plugin": "2.x",
+        "@typescript-eslint/parser": "2.x",
+        "babel-eslint": "10.x",
         "enzyme": "^3.10.0",
-        "eslint": "^6.6.0",
+        "eslint": "6.x",
         "eslint-config-prettier": "^6.7.0",
-        "eslint-config-react-app": "^5.0.2",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-config-react-app": "^5.1.0",
+        "eslint-plugin-flowtype": "3.x",
+        "eslint-plugin-import": "2.x",
+        "eslint-plugin-jsx-a11y": "6.x",
         "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-react": "^7.16.0",
+        "eslint-plugin-react": "7.x",
         "eslint-plugin-react-hooks": "1.x",
         "prettier": "^1.19.1"
     },
