--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
-    "eslint.packageManager": "yarn"
+    "eslint.packageManager": "yarn",
+    "eslint.enable": true
 }
