--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "fortawesome",
         "memoized",
         "normalise",
-        "subheader"
+        "subheader",
+        "unmount"
     ],
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
