--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.25",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
         "@fortawesome/react-fontawesome": "^0.1.7",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^24.0.25",
+        "@types/node": "^13.1.4",
+        "@types/react": "^16.9.17",
+        "@types/react-dom": "^16.9.4",
         "node-sass": "^4.13.0",
-        "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-scripts": "^3.2.0"
+        "react-scripts": "3.3.0",
+        "typescript": "^3.7.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -21,9 +28,11 @@
     },
     "devDependencies": {
         "@ryan-rushton/eslint-config": ">=1.x",
+        "@typescript-eslint/eslint-plugin": "^2.14.0",
+        "@typescript-eslint/parser": "^2.14.0",
         "babel-eslint": ">=10.x",
         "enzyme": ">=3.x",
-        "eslint": ">=6.x",
+        "eslint": "^6.8.0",
         "eslint-config-prettier": ">=6.x",
         "eslint-plugin-babel": ">=5.x",
         "eslint-plugin-import": ">=2.x",
