--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "lint": "eslint ./src",
+        "lint": "yarn eslint ./src --ext .js,.jsx,.ts,.tsx",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
