--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
-        "@ryan-rushton/eslint-config": ">=1.x",
-        "@typescript-eslint/eslint-plugin": "^2.14.0",
-        "@typescript-eslint/parser": "^2.14.0",
-        "babel-eslint": ">=10.x",
+        "@ryan-rushton/eslint-config": "^1.0.6",
+        "@typescript-eslint/eslint-plugin": "^2.18.0",
+        "@typescript-eslint/parser": "^2.18.0",
+        "babel-eslint": "^10.0.3",
         "enzyme": ">=3.x",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": ">=6.x",
-        "eslint-plugin-babel": ">=5.x",
-        "eslint-plugin-import": ">=2.x",
-        "eslint-plugin-jsx-a11y": ">=6.x",
-        "eslint-plugin-prettier": ">=3.x",
-        "eslint-plugin-react": ">=7.x",
-        "eslint-plugin-react-hooks": ">=2.x",
-        "prettier": ">=1.x"
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-babel": "^5.3.0",
+        "eslint-plugin-import": "^2.20.0",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.18.0",
+        "eslint-plugin-react-hooks": "^2.3.0",
+        "prettier": "^1.19.1"
     },
     "browserslist": [
         ">0.2%",
