--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
+# only run build on master, all other branches should go through a PR which also triggers a build
+branches:
+  only:
+    - master
 node_js:
   - node
