--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
+        "prettier": "prettier --write 'src/**/*.(js|ts|tsx|scss)'",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
