--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
-        "@fortawesome/react-fontawesome": "^0.1.12",
+        "@fortawesome/react-fontawesome": "^0.1.13",
         "@types/jest": "^26.0.15",
         "@types/node": "^14.14.9",
-        "@types/react": "^16.9.56",
-        "@types/react-dom": "^16.9.9",
-        "node-sass": "^4.14.1",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
-        "typescript": "^4.0.5"
+        "sass": "^1.29.0",
+        "typescript": "^4.1.2"
     },
     "scripts": {
         "start": "react-scripts start",
