Cleaned up the nav menu, added docs on components and props. Removed my eslint config and set up a eslint to run correctly. Ran prettier/linting over everything.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "auto-close-tag.enableAutoCloseSelfClosingTag": false,
   "auto-close-tag.enableAutoCloseTag": false,
   "cSpell.words": [
+    "clsx",
     "consts",
     "dropdown",
     "elem",
