--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^14.14.20",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "clsx": "^1.1.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
@@ -25,15 +26,14 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
-        "@ryan-rushton/eslint-config": "^1.0.6",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
         "@typescript-eslint/eslint-plugin": "^4.13.0",
         "@typescript-eslint/parser": "^4.13.0",
-        "enzyme": ">=3.x",
         "eslint": "^7.17.0",
         "eslint-config-prettier": "^7.1.0",
+        "eslint-import-resolver-typescript": "^2.3.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
