--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,14 @@
 {
-  "plugins": ["@typescript-eslint", "import", "jsx-a11y", "prettier", "react-hooks"],
+  "plugins": [
+    "@typescript-eslint",
+    "import",
+    "jsx-a11y",
+    "prettier",
+    "react-hooks",
+    "jest",
+    "testing-library",
+    "jest-dom"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -9,6 +18,7 @@
     "project": ["./tsconfig.json"]
   },
   "extends": [
+    // Main
     "eslint:recommended",
     "plugin:import/recommended",
     "plugin:import/errors",
@@ -23,7 +33,11 @@
     "plugin:prettier/recommended",
     "prettier/react",
     "plugin:react-hooks/recommended",
-    "prettier/@typescript-eslint"
+    "prettier/@typescript-eslint",
+    // Testing
+    "plugin:jest/recommended",
+    "plugin:testing-library/recommended",
+    "plugin:jest-dom/recommended"
   ],
   "env": {
     "browser": true,
@@ -57,6 +71,7 @@
     "react/self-closing-comp": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "[iI]gnored" }],
     "@typescript-eslint/restrict-template-expressions": "off"
   }
 }
