--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.34",
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@fortawesome/react-fontawesome": "^0.1.14",
-        "@types/jest": "^26.0.20",
-        "@types/node": "^14.14.20",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
         "clsx": "^1.1.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -26,9 +22,15 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "@testing-library/dom": "^7.29.4",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
+        "@testing-library/react-hooks": "^5.0.0",
         "@testing-library/user-event": "^12.6.0",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.20",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "@typescript-eslint/eslint-plugin": "^4.13.0",
         "@typescript-eslint/parser": "^4.13.0",
         "eslint": "^7.17.0",
@@ -36,10 +38,14 @@
         "eslint-import-resolver-typescript": "^2.3.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-jest-dom": "^3.6.5",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-testing-library": "^3.10.1",
+        "jest-dom": "^4.0.0",
         "prettier": "^2.2.1"
     },
     "browserslist": [
