Fixed some spelling issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,14 @@
   "cSpell.words": [
     "clsx",
     "consts",
+    "divs",
     "dropdown",
     "elem",
     "fontawesome",
     "fortawesome",
     "memoized",
     "normalise",
+    "rerender",
     "stat",
     "subheader",
     "testid",
