--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
         "prettier": "prettier --write 'src/**/*.(js|ts|tsx|scss)'",
         "test": "react-scripts test",
+        "open-cypress": "yarn run cypres open",
         "eject": "react-scripts eject"
     },
     "devDependencies": {
@@ -33,10 +34,12 @@
         "@types/react-dom": "^17.0.0",
         "@typescript-eslint/eslint-plugin": "^4.13.0",
         "@typescript-eslint/parser": "^4.13.0",
+        "cypress": "^6.2.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-import-resolver-typescript": "^2.3.0",
         "eslint-plugin-babel": "^5.3.1",
+        "eslint-plugin-cypress": "^2.11.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.1.3",
         "eslint-plugin-jest-dom": "^3.6.5",
@@ -46,7 +49,8 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-testing-library": "^3.10.1",
         "jest-dom": "^4.0.0",
-        "prettier": "^2.2.1"
+        "prettier": "^2.2.1",
+        "ts-node": "^9.1.1"
     },
     "browserslist": [
         ">0.2%",
