Added tests for the following functionality. Setup eslint config properly for cypress. Cleaned some stuff up.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
+        "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx && eslint ./cypress --ext .js,.jsx,.ts,.tsx",
         "prettier": "prettier --write 'src/**/*.(js|ts|tsx|scss)'",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
