--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "plugins": [
     "@typescript-eslint",
     "import",
@@ -16,36 +17,25 @@
       "jsx": true
     },
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": ["./cypress/tsconfig.json"] // lint is run from the base dir so we need to set this
   },
   "extends": [
     // Main
     "eslint:recommended",
-    "plugin:import/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/react",
-    "plugin:import/typescript",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:prettier/recommended",
-    "prettier/react",
-    "plugin:react-hooks/recommended",
     "prettier/@typescript-eslint",
     // Tests
-    "plugin:jest/recommended",
-    "plugin:testing-library/recommended",
-    "plugin:jest-dom/recommended"
+    "plugin:cypress/recommended"
   ],
   "env": {
     "browser": true,
     "commonjs": true,
     "es2020": true,
-    "jest": true,
-    "node": true
+    "node": true,
+    "cypress/globals": true
   },
   "settings": {
     "import/parsers": {
@@ -61,18 +51,13 @@
     }
   },
   "rules": {
-    "import/default": "off",
-    "import/named": "off",
-    "import/newline-after-import": "warn",
-    "import/no-named-as-default": "off",
-    "import/no-named-as-default-member": "off",
-    "import/order": ["warn", { "newlines-between": "always", "groups": ["builtin", "external"] }],
     "prettier/prettier": "error",
-    "react/prop-types": "off",
-    "react/self-closing-comp": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "[iI]gnored" }],
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/restrict-template-expressions": "off"
   }
 }
