--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@fortawesome/react-fontawesome": "^0.1.14",
         "clsx": "^1.1.1",
+        "i18next": "^19.8.4",
+        "i18next-browser-languagedetector": "^6.0.1",
+        "i18next-http-backend": "^1.0.22",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-i18next": "^11.8.5",
         "react-scripts": "4.0.1",
         "sass": "^1.32.4",
         "typescript": "^4.1.3"
