--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -52,3 +52,15 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           start: yarn start
+
+      - name: Archive Cypress screenshots
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots/**/*
+
+      - name: Archive Cypress videos
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-videos
+          path: cypress/videos/**/*
