--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@typescript-eslint/eslint-plugin": "^4.14.0",
         "@typescript-eslint/parser": "^4.14.0",
         "cypress": "^6.2.1",
+        "cypress-log-to-output": "^1.1.2",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-import-resolver-typescript": "^2.3.0",
