Setup sentry and fixed issue where nav menu was visible on first load.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,8 @@
   ],
   "editor.tabSize": 2,
   "jest.restartJestOnSnapshotUpdate": true,
-  "jest.runAllTestsFirst": false,
-  "jest.disabledWorkspaceFolders": ["node_modules/", "cypress/"]
+  "jest.disabledWorkspaceFolders": [
+    "node_modules/",
+    "cypress/"
+  ]
 }
