--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "the-system",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.34",
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@fortawesome/react-fontawesome": "^0.1.14",
+        "@sentry/react": "^6.0.0",
+        "@sentry/tracing": "^6.0.0",
         "clsx": "^1.1.1",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
