--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@sentry/react": "^6.0.1",
         "@sentry/tracing": "^6.0.1",
         "clsx": "^1.1.1",
+        "framer-motion": "^3.2.2-rc.1",
         "i18next": "^19.8.4",
         "i18next-browser-languagedetector": "^6.0.1",
         "i18next-http-backend": "^1.0.22",
@@ -16,6 +17,7 @@
         "react-dom": "^17.0.1",
         "react-i18next": "^11.8.5",
         "react-scripts": "4.0.1",
+        "rxjs": "^6.6.3",
         "sass": "^1.32.5",
         "typescript": "^4.1.3"
     },
