--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,5 +74,14 @@
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "[iI]gnored" }],
     "@typescript-eslint/restrict-template-expressions": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": "**.test.ts?(x)",
+      "rules": {
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off"
+      }
+    }
+  ]
 }
