Updated a bunch of deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,10 +31,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:prettier/recommended",
-    "prettier/react",
+    "plugin:prettier/recommended", // This includes prettier extension
     "plugin:react-hooks/recommended",
-    "prettier/@typescript-eslint",
     // Tests
     "plugin:jest/recommended",
     "plugin:testing-library/recommended",
