--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,6 @@
     "project": ["./tsconfig.json"]
   },
   "extends": [
-    // Main
     "eslint:recommended",
     "plugin:import/recommended",
     "plugin:import/errors",
@@ -31,12 +30,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:prettier/recommended", // This includes prettier extension
-    "plugin:react-hooks/recommended",
-    // Tests
-    "plugin:jest/recommended",
-    "plugin:testing-library/recommended",
-    "plugin:jest-dom/recommended"
+    "plugin:prettier/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "env": {
     "browser": true,
@@ -76,6 +71,16 @@
   "overrides": [
     {
       "files": "**.test.ts?(x)",
+      "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:prettier/recommended",
+        "plugin:jest/recommended",
+        "plugin:testing-library/react",
+        "plugin:jest-dom/recommended"
+      ],
       "rules": {
         "@typescript-eslint/no-unsafe-assignment": "off",
         "@typescript-eslint/no-unsafe-member-access": "off"
