--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,7 @@
     "react/self-closing-comp": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-floating-promises": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "[iI]gnored" }],
+    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_[iI]gnored" }],
     "@typescript-eslint/restrict-template-expressions": "off"
   },
   "overrides": [
