More renovate bot tweaks

--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,18 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    ":prHourlyLimitNone",
+    ":automergePatch"
   ],
   "reviewers": [
     "ryan-rushton"
+  ],
+  "packageRules": [
+    {
+      "matchDepTypes": [
+        "devDependencies"
+      ],
+      "automerge": true
+    }
   ]
 }
