--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,12 +29,13 @@ jobs:
         uses: actions/cache@v2
         env:
           cache-name: cache
+          cache-version: 2
         with:
           path: ~/.cache
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('yarn.lock') }}
+          key: ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-${{ hashFiles('yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('yarn.lock') }}
-            ${{ runner.os }}-${{ env.cache-name }}-
+            ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-${{ hashFiles('yarn.lock') }}
+            ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-
 
       - name: Install
         run: yarn install --immutable --immutable-cache --check-cache
