--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,7 @@
 nodeLinker: node-modules
 
-packageExtensions:
-  react-scripts@*:
-    peerDependencies:
-      eslint-config-react-app: "*"
-
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+    spec: '@yarnpkg/plugin-interactive-tools'
 
 yarnPath: .yarn/releases/yarn-3.2.2.cjs
