--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@fortawesome/fontawesome-svg-core": "6.1.2",
     "@fortawesome/free-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@sentry/react": "7.9.0",
-    "@sentry/tracing": "7.9.0",
+    "@sentry/react": "7.10.0",
+    "@sentry/tracing": "7.10.0",
     "clsx": "1.2.1",
-    "framer-motion": "7.0.0",
+    "framer-motion": "7.1.0",
     "i18next": "21.9.0",
-    "i18next-browser-languagedetector": "6.1.4",
+    "i18next-browser-languagedetector": "6.1.5",
     "i18next-http-backend": "1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,12 +31,12 @@
   },
   "devDependencies": {
     "@testing-library/dom": "8.17.1",
-    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "28.1.6",
-    "@types/node": "18.6.5",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.33.0",
