Github action changes.

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,10 +5,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 19.x
+          node-version: 20.x
+          cache: 'pnpm'
 
       - uses: actions/checkout@v3
 
@@ -38,22 +42,22 @@ jobs:
             ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-
 
       - name: Install
-        run: yarn install --immutable --immutable-cache
+        run: yarn install --frozen-lockfile
 
       - name: Test
-        run: yarn test
+        run: pnpm test
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
       - name: Build
-        run: yarn build
+        run: pnpm build
 
       - name: Cypress Browser Tests
         uses: cypress-io/github-action@v4
         with:
           browser: chrome
-          start: yarn start
+          start: pnpm start
           wait-on: 'http://localhost:3000'
           wait-on-timeout: 180
         # Uncomment to enable i18n debug logging which will be shown in the step logs.
