--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -36,22 +36,22 @@ jobs:
           cache-version: 2
         with:
           path: ~/.cache
-          key: ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-${{ hashFiles('yarn.lock') }}
+          key: ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-${{ hashFiles('yarn.lock') }}
+            ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-${{ hashFiles('pnpm-lock.yaml') }}
             ${{ runner.os }}-${{ env.cache-name }}-v${{ env.cache-version }}-
 
       - name: Install
-        run: yarn install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Test
         run: pnpm test
 
       - name: Lint
-        run: pnpm lint
+        run: pnpm run lint
 
       - name: Build
-        run: pnpm build
+        run: pnpm run build
 
       - name: Cypress Browser Tests
         uses: cypress-io/github-action@v4
