--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-testing-library": "6.2.2",
+    "identity-obj-proxy": "^3.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
     "ts-node": "10.9.2"
