--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Cache
         uses: actions/cache@v4
         env:
-          cache-name: cache-pnpm
+          cache-name: cache
           cache-version: 2
         with:
           path: ~/.cache
