--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-    "printWidth": 120,
-    "singleQuote": true,
-    "tabWidth": 2
+  "plugins": ["prettier-plugin-organize-imports"],
+  "printWidth": 120,
+  "singleQuote": true,
+  "tabWidth": 2
 }
