--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,5 @@
     "typescriptreact"
   ],
   "editor.tabSize": 2,
-  "editor.detectIndentation": false,
-  "jest.disabledWorkspaceFolders": ["node_modules/", "cypress/"]
+  "editor.detectIndentation": false
 }
