--- a/package.json
+++ b/package.json
@@ -3,82 +3,41 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.24.5",
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "@sentry/react": "7.112.2",
     "@sentry/tracing": "7.112.2",
-    "@svgr/webpack": "^8.0.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^9.0.0",
-    "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
-    "bfj": "^8.0.0",
-    "browserslist": "^4.23.0",
-    "camelcase": "^6.3.0",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "clsx": "2.1.1",
-    "css-loader": "^6.11.0",
-    "css-minimizer-webpack-plugin": "^6.0.0",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^4.0.0",
-    "file-loader": "^6.2.0",
     "framer-motion": "11.1.7",
-    "fs-extra": "^11.0.0",
-    "html-webpack-plugin": "^5.6.0",
     "i18next": "23.11.3",
     "i18next-browser-languagedetector": "7.2.1",
     "i18next-http-backend": "2.5.1",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
-    "jest-resolve": "^27.5.1",
     "jest-watch-typeahead": "^2.0.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "postcss": "^8.4.38",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.8.3",
-    "prompts": "^2.4.2",
     "react": "18.3.1",
     "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "18.3.1",
     "react-i18next": "14.1.1",
-    "react-refresh": "^0.14.0",
-    "resolve": "^1.22.8",
-    "resolve-url-loader": "^4.0.0",
     "rxjs": "7.8.1",
     "sass": "1.76.0",
-    "sass-loader": "^12.6.0",
-    "semver": "^7.6.0",
-    "source-map-loader": "^3.0.2",
-    "style-loader": "^3.3.4",
-    "tailwindcss": "^3.4.3",
-    "terser-webpack-plugin": "^5.3.10",
-    "typescript": "5.4.5",
-    "webpack": "^5.91.0",
-    "webpack-dev-server": "^4.15.2",
-    "webpack-manifest-plugin": "^4.1.1",
-    "workbox-webpack-plugin": "^6.6.0"
+    "typescript": "5.4.5"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx && eslint ./cypress --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier --write 'src/**/*.(js|ts|tsx|scss)'",
-    "test": "node scripts/test.js"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false"
   },
   "devDependencies": {
-    "@testing-library/dom": "10.1.0",
-    "@testing-library/jest-dom": "6.4.5",
+    "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "15.0.6",
-    "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.8",
@@ -86,23 +45,27 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^1.6.0",
     "cypress": "13.8.1",
     "cypress-log-to-output": "1.1.2",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-cypress": "3.0.3",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jest": "28.3.0",
-    "eslint-plugin-jest-dom": "5.4.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-testing-library": "6.2.2",
-    "identity-obj-proxy": "^3.0.0",
+    "jsdom": "^24.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
-    "ts-node": "10.9.2"
+    "vite": "^5.2.11",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
   "browserslist": [
     ">0.2%",
@@ -115,64 +78,5 @@
     "last 1 firefox version",
     "last 1 safari version"
   ],
-  "packageManager": "pnpm@8.15.8",
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  }
+  "packageManager": "pnpm@8.15.8"
 }
