--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-sonarjs": "^1.0.3",
     "eslint-plugin-testing-library": "6.2.2",
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
