--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -20,7 +20,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Approve builds
-        run: pnpm approve-builds
+        run: pnpm approve-builds --approve
 
       - name: Test
         run: pnpm test
